# google-translate

./: .gitignore  .travis.yml  LICENSE  README.md  circle.yml  default.nix  google-translate.cabal  google-translate.nix  stack.yaml  upload.nix
src/Web/Google/: Translate.hs  Translate.hs~
