name:                google-translate
version:             0.3
synopsis:            Google Translate API bindings
license:             BSD3
license-file:        LICENSE
author:              David Johnson, Dmitry Dzhus
maintainer:          djohnson.m@gmail.com
copyright:           David Johnson (c) 2016
category:            Web
build-type:          Simple
cabal-version:       >=1.10
description:         Google Translate Library

extra-source-files:
    README.md

library
  exposed-modules:     Web.Google.Translate
  ghc-options: -Wall
  hs-source-dirs:      src
  build-depends:       aeson
                     , base           >= 4.7 && < 5
                     , bytestring     == 0.10.*
                     , transformers   >= 0.4 && < 0.6
                     , http-api-data  >= 0.2 && < 0.4
                     , http-client    >= 0.4 && < 0.6
                     , servant        >= 0.7 && < 0.10
                     , servant-client >= 0.7 && < 0.10
                     , text           == 1.2.*
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dmjio/google-translate
