name:                google-translate
version:             0.5
synopsis:            Google Translate API bindings
license:             BSD3
license-file:        LICENSE
author:              David Johnson, Dmitry Dzhus
maintainer:          code@dmj.io
copyright:           David Johnson (c) 2018-2025
category:            Web
build-type:          Simple
cabal-version:       >=1.10
description:         A Haskell library for the Google Translate service

extra-source-files:
    README.md

library
  exposed-modules:     Web.Google.Translate
  ghc-options:        -Wall
  hs-source-dirs:      src
  build-depends:       aeson
                     , base           >= 4.7 && < 5
                     , bytestring     
                     , transformers   
                     , http-api-data  >= 0.2
                     , http-client    >= 0.4
                     , servant        >= 0.13
                     , servant-client >= 0.13
                     , text           
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dmjio/google-translate
